fix overflow card body

--- a/src/pages/cats/components/Visor/VisorRate.module.css
+++ b/src/pages/cats/components/Visor/VisorRate.module.css
@@ -1,22 +1,7 @@
-.view__container {
+.visor__container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100vw;
-}
-
-.view__container::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
-  height: 100%;
-  background-image: url("/src/assets/images/cats_background.jpg");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  filter: blur(4px);
-  z-index: -1;
 }
